# Sorting-Visualization

./: README.md  rs.qrc
include/: bar.h  mainwindow_ui.h
project/: CMakeLists.txt
screen/: main.cpp  mainwindow_anim.cpp  mainwindow_slots.cpp  mainwindow_ui.cpp
